--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,4 +2,6 @@
 name = "dagster-dbt-ecs-sample"
 version = "0.1.0"
 requires-python = ">=3.12"
-dependencies = []
+dependencies = [
+    "dagster-dbt>=0.26.18",
+]
