--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,4 +4,10 @@ version = "0.1.0"
 requires-python = ">=3.12"
 dependencies = [
     "dagster-dbt>=0.26.18",
+    "dagster-webserver>=1.10.18",
+    "dbt-snowflake>=1.9.4",
 ]
+
+[tool.ruff]
+line-length = 88
+exclude = ["jaffle_shop/"]
