--- a/terraform/foundation/terraform.tfvars.example
+++ b/terraform/foundation/terraform.tfvars.example
@@ -6,6 +6,9 @@ vpc_cidr = "10.0.0.0/16"
 public_subnet_cidrs = ["10.0.1.0/24", "10.0.2.0/24"]
 private_subnet_cidrs = ["10.0.3.0/24", "10.0.4.0/24"]
 
+# ALB Secturity Group Configuration (optional)
+prefix_list_ids = ["pl-xxxxxxxxxxxxxxxxx"]
+
 # Dagster PostgreSQL Database Configuration
 dagster_postgres_db = "dagster"
 dagster_postgres_user = "dagster_user"
